# video-highlights-extractor

./: .gitignore  LICENSE.txt  README.md  fixed_parallel.py  main.py  ml_highlights.py  parallel_smolvlm_highlights.py  pyproject.toml  quick_test.py  requirements.txt  requirements_ml.txt  requirements_smolvlm.txt  setup.py  simple_parallel.py  smolvlm_highlights.py  video_highlights.py
video_extractor/: __init__.py  __main__.py
video_extractor/core/: __init__.py  base.py  basic.py  ml.py  smolvlm.py
video_extractor/utils/: __init__.py
