[project]
name = "video-highlights-extractor"
version = "1.0.0"
description = "A Python cli tool for extracting vertical 9:16 highlights from videos using AI-powered scene detection"
authors = [
    {name = "Video Highlights Extractor"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["video", "highlights", "extraction", "ai", "computer-vision"]
dependencies = [
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
basic = []
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "accelerate>=0.20.0",
]
smolvlm = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "accelerate>=0.20.0",
    "pillow>=9.0.0",
    "sentencepiece>=0.1.99",
]
all = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "accelerate>=0.20.0",
    "pillow>=9.0.0",
    "sentencepiece>=0.1.99",
]

[project.scripts]
video-highlights = "video_extractor.__main__:main"

[project.urls]
Source = "https://github.com/your-username/video-highlights-extractor"
"Bug Reports" = "https://github.com/your-username/video-highlights-extractor/issues"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"
